--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -41,6 +41,8 @@
     width: 340px
   .newsletter
     padding: 92px 0 93px 0
+    &::after
+      opacity: 1
     &-wrapper
       max-width: 700px
   .reviews
